# hge2

./: .gitignore  CMakeLists.txt  README.md  README_hge.md  cmake_linux.sh  cmake_msvs11_x86.bat  cmake_msvs12_x86.bat  format.sh
include/: hge.h  hge_gapi.h  hgeanim.h  hgecolor.h  hgedistort.h  hgefont.h  hgegui.h  hgeguictrls.h  hgeparticle.h  hgerect.h  hgeresource.h  hgesprite.h  hgestrings.h  hgevector.h
src/core/: CMakeLists.txt  demo.cpp  graphics.cpp  hge_glfuncs.h  hge_impl.h  hge_portable.cpp  hge_portable.h  ini.cpp  input.cpp  power.cpp  random.cpp  resource.cpp  sound.cpp  sound_libbass.cpp  sound_openal.cpp  system.cpp  timer.cpp
src/core/BASS/: bass.h
src/core/CxImage/: stdint.h  xfile.h  ximaenc.cpp  ximage.cpp  ximage.h  ximaico.h  ximaiter.h  ximajas.cpp  ximajbg.cpp  ximalyr.cpp  ximamng.cpp  ximapal.cpp  ximapcx.cpp  ximapcx.h  ximapng.cpp  ximaraw.h  ximasel.cpp  ximaska.cpp  ximaska.h  ximatga.cpp  ximatga.h  ximath.cpp  ximatran.cpp  ximawbmp.cpp  ximawbmp.h  ximawmf.h  ximawnd.cpp  xiofile.h  xmemfile.cpp  xmemfile.h
src/core/ZLIB/: crypt.h  inflate.h  inftrees.h  ioapi.h  trees.h  unzip.h  zconf.in.h  zip.h  zlib.h  zutil.h
src/core/common/: demo.cpp  hge2.cpp  hge_utils.h  random.cpp  timer.cpp
src/core/unix/: gl.h  graphics.cpp  hge_glfuncs.h  hge_impl.h  ini.cpp  input.cpp  resource.cpp  sound_openal.cpp  system.cpp  unix_compat.h
src/core/windows/: graphics.cpp  hge_impl.h  ini.cpp  input.cpp  power.cpp  resource.cpp  sound_libbass.cpp  system.cpp
src/core/windows/BASS/: bass.h
src/core/windows_old/: graphics.cpp  resource.cpp  sound_libbass.cpp  system.cpp
src/fontconv/: fontconv.cpp
src/fonted/: commands.cpp  fonted.cpp  fonted.h  fontlist.cpp  fontlist.h  generate.cpp  hgeguirange.cpp  hgeguirange.h  savepng.cpp
src/fonted/ZLIB/: zlib.h  zutil.h
src/fonted/libPNG/: pngconf.h
src/helpers/: hgeanim.cpp  hgecolor.cpp  hgedistort.cpp  hgefont.cpp  hgegui.cpp  hgeguictrls.cpp  hgeparticle.cpp  hgepmanager.cpp  hgerect.cpp  hgeresource.cpp  hgesprite.cpp  hgestrings.cpp  hgevector.cpp  parser.cpp  parser.h  resources.cpp  resources.h
src/libPNG/: png.c  png.h  pngconf.h  pngerror.c  pnggccrd.c  pngget.c  pngmem.c  pngpread.c  pngread.c  pngrio.c  pngrtran.c  pngrutil.c  pngset.c  pngtrans.c  pngvcrd.c  pngwio.c  pngwrite.c  pngwtran.c  pngwutil.c
src/particleed/: commands.cpp  particleed.cpp  particleed.h
src/pngopt/: pngopt.cpp  pngopt.h  savepngpitch.cpp
src/pngopt/ZLIB/: deflate.h  inflate.h  inftrees.h  zconf.h
src/pngopt/libPNG/: png.h
src/sdl2/include/: SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  (+29 more)
src/texasm/: RectPlacement.cpp  RectPlacement.h  gfx_object.h  optimized_texture.cpp  optimized_texture.h  sprite_object.cpp  sprite_object.h  texasm.cpp  texasm.h  texture_assembler.cpp  texture_assembler.h  writePNG.cpp
src/zlib-1.2.5/: adler32.c  compress.c  crc32.c  deflate.c  example.c  gzclose.c  gzguts.h  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inflate.c  inftrees.c  inftrees.h  minigzip.c  trees.c  uncompr.c  zlib.h  zutil.c  zutil.h
tools/: CMakeLists.txt
tutorials/: CMakeLists.txt
tutorials/tutorial01/: hge_tut01.cpp
tutorials/tutorial02/: hge_tut02.cpp
tutorials/tutorial03/: hge_tut03.cpp
tutorials/tutorial04/: hge_tut04.cpp
tutorials/tutorial05/: hge_tut05.cpp
tutorials/tutorial06/: hge_tut06.cpp  menuitem.cpp  menuitem.h
tutorials/tutorial07/: hge_tut07.cpp
tutorials/tutorial08/: hge_tut08.cpp
(+46 files in other folders)
